# live_caption_rs

./: Cargo.toml  README.md
src/: main.rs
src/utils/: audio.rs  audio_cpal.rs  audio_linux.rs  audio_linux_replace.rs  audio_macos.rs  audio_windows.rs  mod.rs  osc.rs  stt.rs  ui.rs  ui_settings.rs
